# CudaPracSession

cute/: sgemm.cu  sgemm2.cu
cute/matrix_addition/: matAdd.cu  util.cuh
cute/vector_addition/: util.cuh  vecAdd.cu
matmul/: binding.cpp  gemm_tc.cu  main.cu  main.h  setup.py
mem_bound/: relu.cu
reduction/: ref_max_2.cu  sum.cu
rmsnorm/: bench.cu  naive_rmsnorm.cuh  optim_rms.cuh  utils.cuh
softmax/: 4.cu  CMakeLists.txt
